syntax = "proto3";

package proto;

option go_package = "github.com/DenisKhanov/PrivateKeeperV2/internal/proto/credit_card";

message PostCreditCardRequest {
    string number = 1;
    string owner_name = 2;
    string expires_at = 3;
    string cvv_code = 4;
    string pin_code = 5;
    string metadata = 6;
}

message PostCreditCardResponse {
    string id = 1;
    string owner_id = 2;
    string number = 3;
    string owner_name = 4;
    string expires_at = 5;
    string cvv_code = 6;
    string pin_code = 7;
    string metadata = 8;
    string created_at = 9;
}

message GetCreditCardRequest {
    string id = 1;
}

message CreditCard {
    string id = 1;
    string owner_id = 2;
    string number = 3;
    string owner_name = 4;
    string expires_at = 5;
    string cvv_code = 6;
    string pin_code = 7;
    string metadata = 8;
    string created_at = 9;
}

message GetCreditCardResponse {
    CreditCard card_data = 1;
}

message GetAllCreditCardInfoRequest {
}

message CreditCardInfo {
    string id = 1;
    string data_type =2;
    string metadata = 3;
    string created_at = 4;
}

message GetAllCreditCardInfoResponse {
    repeated CreditCardInfo cards = 1;
}

service CreditCardService {
    rpc PostSaveCreditCard (PostCreditCardRequest) returns (PostCreditCardResponse);
    rpc GetLoadCreditCard (GetCreditCardRequest) returns (GetCreditCardResponse);
    rpc GetLoadAllCreditCardDataInfo (GetAllCreditCardInfoRequest) returns (GetAllCreditCardInfoResponse);
}